Fix Identify Logo pop-up overflow

--- a/wp-content/themes/eurokera/assets/scss/templates/_cooktop-users.scss
+++ b/wp-content/themes/eurokera/assets/scss/templates/_cooktop-users.scss
@@ -295,7 +295,6 @@ section.locate-support {
 .epop-identify {
 	position: absolute;
 	width: 416px;
-	height: 375px;
 	padding: 65px 20px 60px 20px;
 	top: 50%;
 	left: 50%;
@@ -315,7 +314,6 @@ section.locate-support {
 	h3 {
 		color: #fff;
 		display: inline-block;
-		max-width: 250px;
 		margin-bottom: 25px;
 	}
 	.eurokera-logo-2 {
